2008-07-15  vadim  <vadim@vk.crocodile.org>

	* testing and bug fixes with QT 4.4.

	* Testing on Mac OS X and Windows Vista.

2008-07-08  vadim  <vadim@vk.crocodile.org>


	* fwcompiler.pro (LIBS): fixed build errors on Ubuntu Hardy.
	Background info: need to include -lfwbuilder while linking
	fwcompiler library on all Unix platforms because of the linker
	option -Wl,-Bsymbolic-functions . Discovered this on Ubuntu Hardy
	where libsnmp adds this option via net-snmp-config --libs

2008-07-07  Vadim Kurland  <vadim@vk.crocodile.org>

	* listOfLibraries.cpp (listOfLibraries::listOfLibraries): Removed
	support for add-on libraries in the GUI. User can now open their
	working file and external library file simultaneously and copy
	objects from one to another. This removes the need for the
	cumbersome add-on libraries feature. Will keep module
	listOfLibraries and corresponding code fragments in ProjectPanel
	and FWWindow until removal of this feature is validated by users.

	* PolicyCompiler_pf_writers.cpp: Support for "synproxy state"
	option for PF per FR #1098098: "Per-rule Synproxy"

	* templates.xml.in: Updated template firewall objects to include
	"top_rule_set" attribute.

	* RuleSetDialog.cpp (RuleSetDialog::loadFWObject): Added attribute
	"top_rule_set" to Policy, NAT and Routing objects. This attribute
	is controlled by a checkbox "Top rule set" in the corresponding
	object dialog.

	The attribute has platform-specific meanning. On iptables, "top"
	rule set goes into the built-in chains INPUT, OUTPUT, FORWARD; if
	this flag is unchecked, rules go into user-defined chain with the
	name the same as the name of the rule set. On PF, If this flag is
	unchecked, rules go into anchor with the name the same as the name
	of the rule set. On Ciscio IOS ACL If this flag is unchecked,
	generated access list will not be assigned to interfaces with "ip
	access-group" command and also the name of the ACL will be
	prefixed with the name of the rule set to make it unique.
